@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-17T16:25:40Z",
+  "timestamp" : "2022-11-18T08:22:31Z",
   "count_outdated" : 2607,
   "uniques_outdated" : 701,
-  "count" : 2632,
-  "uniques" : 713,
+  "count" : 2633,
+  "uniques" : 714,
   "clones" : [
     {
       "timestamp": "2022-11-06T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
