@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 8,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
