@@ -1,3 +1,11 @@
+2022-11-18T08:22:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3495303515 # 1039
+* notice: last 14d: unq all: 8 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 701 2607 / 713 2632
+* notice: next accum: outdated-unq outdated-all / unq all: 701 2607 / 714 2633
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-11-17T16:25:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3490088229 # 1037
 * notice: last 14d: unq all: 8 25
